Fix json serialization if data too long
closes #4

--- a/MyAdmin.Mvc/Content/css/app.css
+++ b/MyAdmin.Mvc/Content/css/app.css
@@ -166,6 +166,10 @@
     }
 }
 
+.wrap-footer {
+    margin-top: 20px;
+}
+
 /*#endregion */
 
 /*#region Buttons */
